Fix Findbugs issues / Eclipse warnings. Some genuine issues Some changes to make code easier to read (for humans and analysis tools)
git-svn-id: https://svn.apache.org/repos/asf/tomcat/trunk@1050117 13f79535-47bb-0310-9956-ffa450edef68